--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@ body {
   src: url("../fonts/Lato-Regular.ttf")
 }
 
+@font-face {
+  font-family: "CabinSketch-Regular";
+  src: url("../fonts/CabinSketch-Regular.ttf")
+}
+
 .logo {
   margin-left: 2%;
   margin-top: 2%;
@@ -468,9 +473,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave2 {
   background-image: url("../images/opgaver/002.png");
@@ -479,9 +484,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave3 {
   background-image: url("../images/opgaver/003.png");
@@ -490,9 +495,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave4 {
   background-image: url("../images/opgaver/004.png");
@@ -501,9 +506,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave5 {
   background-image: url("../images/opgaver/005.png");
@@ -512,9 +517,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave6 {
   background-image: url("../images/opgaver/006.png");
@@ -523,9 +528,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave7 {
   background-image: url("../images/opgaver/007.png");
@@ -534,9 +539,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave8 {
   background-image: url("../images/opgaver/008.png");
@@ -545,9 +550,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave9 {
   background-image: url("../images/opgaver/009.png");
@@ -556,9 +561,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave10 {
   background-image: url("../images/opgaver/010.png");
@@ -567,9 +572,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave11 {
   background-image: url("../images/opgaver/011.png");
@@ -578,9 +583,9 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
 .img-opgave12 {
   background-image: url("../images/opgaver/012.png");
@@ -589,10 +594,20 @@ p.bruger-beskrivelse {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lato-Regular";
   font-size: 26px;
   color: #fff;
+  transition:all 0.3s ease;
 }
+
+div a {
+  font-family: "CabinSketch-Regular";
+  text-decoration: none;
+}
+
+div a:hover {
+  opacity: 0.5;
+}
+
 /**********************************************/
 .kursus {
   max-width: 421px;
