--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,8 @@ margin-left: 150px;
   background-color: #E4ECF2;
   border-radius: 20px;
   margin: 0px 20px 20px 20px;
+  box-shadow: 2px 2px 5px #777777;
+
 }
 .traad-container {
   background-color: #f1f1f2;
