--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -600,7 +600,19 @@ p.bruger-beskrivelse {
   color: #fff;
   transition:all 0.3s ease;
 }
-
+.opgave-boks {
+  width: 450px;
+  height: 300px;
+  background-color: #044C7F;
+  border-radius: 20px 20px 0px 0px;
+  margin: 20px;
+}
+.opgave-billede {
+  width: 100%;
+  height: 190px;
+  background-color: red;
+  border-radius: 20px 20px 0px 0px;
+}
 div a {
   font-family: "CabinSketch-Regular";
   text-decoration: none;
@@ -642,7 +654,7 @@ div a:hover {
   background-color: brown;
   border-radius: 20px 20px 0px 0px;
 }
-.lektionsplan-beskrivelse {
+.boks-hvidtekst {
   color: #fff;
   font-family: "Lato-Regular";
   font-size: 16px;
