--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,7 +437,7 @@ p.bruger-beskrivelse {
   padding: 20px 20px 20px 20px;
   box-sizing: border-box;
   display: flex;
-  background-color: #E4ECF2;;
+  background-color: #E4ECF2;
 }
 #aside-kurser {
   background: #E4ECF2;
