Fix af side materialer.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,7 +433,7 @@ p.bruger-beskrivelse {
   font-size: 16px;
 }
 #post-kommentar {
-  max-width: 1470px;
+  max-width: 1510px;
   height: 300px;
   margin: 20px auto auto auto;
 }
@@ -460,6 +460,9 @@ p.bruger-beskrivelse {
   margin: 10px 0px 0px 0px;
   border-style: none;
 }
+#knap-tilfoejkommentar:hover {
+  background-color: #
+}
 /**************************MATERIALER*************************/
 #wrapper {
   padding: 20px 20px 20px 20px;
@@ -468,13 +471,15 @@ p.bruger-beskrivelse {
   background-color: #E4ECF2;
 }
 #aside-kurser {
-  background: #E4ECF2;
+  background: #f1f1f2;
   display: flex;
   flex: 1;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
+  justify-content: center;
   border-radius: 20px;
+  padding: 0px 0px 20px 0px;
+  box-sizing: border-box;
 }
 #col-2 {
   display: flex;
@@ -488,7 +493,7 @@ p.bruger-beskrivelse {
 }
 #section_aarsplaner {
   flex: 1;
-  background-color: red;
+  background-color: #f1f1f2;
   margin: 20px 10px 0px 0px;
   border-radius: 20px;
   box-sizing: border-box;
@@ -498,7 +503,7 @@ p.bruger-beskrivelse {
 }
 #section_emnedage {
   flex: 1;
-  background-color: red;
+  background-color: #f1f1f2;
   border-radius: 20px;
   box-sizing: border-box;
   display: flex;
@@ -507,14 +512,14 @@ p.bruger-beskrivelse {
   margin: 20px 0px 0px 10px;
 }
 #section-lektionsplaner {
-  background: red;
+  background: #f1f1f2;
   display: flex;
   flex-direction: row wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   border-radius: 0px 0px 20px 20px;
   display: flex;
   flex-wrap: wrap;
-  padding: 20px;
+  padding: 40px 20px 40px 20px;
   box-sizing: border-box;
 }
 /* ********************************************/
@@ -696,22 +701,22 @@ p.bruger-beskrivelse {
   flex-direction: row;
   flex-wrap: wrap;
   max-width: 420px;
-  min-height: 180px;
-  background-color: #f1f1f2;
+  background-color: #ffffff;
   margin: 20px 20px 0px 20px;
   border-radius: 20px;
   box-sizing: border-box;
 }
 .kursus-billede {
-  box-sizing: border-box;
-  width: 150px;
-  height: 150px;
+  width: 80px;
+  height: 80px;
+  padding: 10px 0px 0px 10px;
 }
 p.kursus-beskrivelse {
-  max-width: 270px;
+  max-width: 196px;
   padding: 10px;
   box-sizing: border-box;
   font-family: "Lato-Regular";
+  border-radius: 20px;
 }
 .lektionsplan {
   width: 230px;
@@ -727,6 +732,16 @@ p.kursus-beskrivelse {
   border-radius: 20px 20px 0px 0px;
 }
 .boks-hvidtekst {
+  color: #fff;
+  font-family: "Lato-Regular";
+  font-size: 30px;
+  box-sizing: border-box;
+  padding: 10px 0px 0px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.boks-opgtekst {
   color: #fff;
   font-family: "CabinSketch-Regular";
   font-size: 30px;
