--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,8 +517,6 @@ p.bruger-beskrivelse {
   flex-direction: row wrap;
   justify-content: center;
   border-radius: 0px 0px 20px 20px;
-  display: flex;
-  flex-wrap: wrap;
   padding: 40px 20px 40px 20px;
   box-sizing: border-box;
 }
@@ -719,7 +717,7 @@ p.kursus-beskrivelse {
   border-radius: 20px;
 }
 .lektionsplan {
-  width: 230px;
+  max-width: 230px;
   height: 300px;
   background-color: #044C7F;
   border-radius: 20px 20px 0px 0px;
@@ -727,7 +725,7 @@ p.kursus-beskrivelse {
 }
 .lektionsplan-billede {
   width: 100%;
-  height: 140px;
+  height: auto;
   background-color: brown;
   border-radius: 20px 20px 0px 0px;
 }
