--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -855,6 +855,12 @@ h1.boks-titel {
   align-items: center;
   justify-content: center;
 }
+h1.klasse-titel {
+  font-family: "Lato-Regular";
+  font-size: 22px;
+  padding-bottom: 20px;
+  text-align: center;
+}
 .opgave-img {
   width: 400px;
   height: 250px;
@@ -878,7 +884,7 @@ h1.boks-titel {
   line-height: 30px;
 }
 p.opg-beskrivelse {
-  margin-bottom: 10px;
+  margin: 0px 20px 10px 0px;
 }
 .img-download {
   width: 80px;
@@ -897,7 +903,8 @@ p.opg-beskrivelse {
   font-weight: bold;
   color: #fff;
   font-size: 18px;
-  padding: 20px;
+  text-align: center;
+  padding-top: 40px;
   box-sizing: border-box;
 }
 .downloadico {
