--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ header#header-minprofil {
 
 .oploadbuttom {
   position: absolute;
-  width: 180px;
+  max-width: 180px;
   height: auto;
   right: 20px;
 }
