--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,40 +212,55 @@ h1#page-title {
   margin: 0;
 }
 
-.choices h2 {
+.filter_search {
   position: absolute;
-  right: 180px;
-  bottom: 20px;
-  float: right;
-  color: grey;
-  background-color: white;
-  padding: 10px 90px 10px 10px;
-  border-radius: 15px;
+  height: 120px;
+  right: 0;
+  display: flex;
+  align-items: center;
+  padding-right: 2%;
 }
 
+.filter {
+  display: flex;
+  width: 150px;
+  background: white;
+  border-radius: 20px;
+  align-items: center;
+  margin: 10px;
+  box-shadow: 2px 2px 2px #c4c4c4;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.filter:hover {
+  opacity: 0.8;
+}
+
+.filter h2 {
+  font-family: "Lato-Light";
+  margin:auto;
+  font-size: 18px;
+  font-weight: 200;
+}
 
 .fa-caret-square-o-down {
-  position: absolute;
-  right: 130px;
-  bottom: 20px;
-  float: right;
-  color: grey;
-  padding: 10px 75px 10px 10px;
-  border-radius: 15px;
-  font-size: 30px;
+  font-size: 20px;
+  margin: auto;
+  color: #044C7F;
 }
 
-.search h2 {
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
-  float: right;
-  color: grey;
-  background-color: white;
-  padding: 10px 90px 10px 10px;
-  border-radius: 15px;
+.fa-caret-square-o-down:hover {
+  opacity: 0.5;
 }
-x
+
+.search {
+width: 150px;
+height: 20px;
+border-radius: 20px;
+margin: 10px;
+}
+
 
 #container {
   background-color: #216393;
@@ -361,6 +376,8 @@ footer {
 .justify-center {
   display: flex;
   justify-content:center;
+  width: 80%;
+  margin: auto;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -427,7 +444,14 @@ footer {
   background-color: white;
   margin: 20px;
   padding: 20px;
+  transition: all 0.3s ease;
+  cursor: pointer;
 }
+
+.traad-container:hover {
+   transform: scale(0.95);
+}
+
 h1.traad-titel {
   color: #6b6b6b;
   font-family: "Lato-Regular";
@@ -489,7 +513,7 @@ p.forum-pagenumber {
 .post-bruger {
   min-width: 250px;
   max-width: 400px;
-  background-color: #E4ECF2;
+  background-color: #044C7F;
   border-radius: 20px;
   padding: 20px;
   box-sizing: border-box;
@@ -497,6 +521,8 @@ p.forum-pagenumber {
   flex-direction: column;
   justify-content: center;
 }
+
+
 .bruger-img {
   width: 250px;
   height: auto;
@@ -518,6 +544,7 @@ p.bruger-beskrivelse {
   color: #044C7F;
   font-family: "Lato-Regular";
   font-size: 16px;
+    color: white;
 }
 #post-kommentar {
   max-width: 1510px;
@@ -877,6 +904,12 @@ h1.boks-titel {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease;
+}
+
+h1.boks-titel:hover {
+  opacity: 0.5;
+  box-shadow: inset 0 0 0 5px #53a7ea;
 }
 
 a {
@@ -1008,7 +1041,7 @@ p.opg-beskrivelse {
   border-radius: 20px;
 }
 .brugernavn {
-  color: #6b6b6b;
+  color: white;
   font-family: "Lato-Regular";
   font-size: 20px;
   padding: 10px 0px 10px 0px;
