--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -301,6 +301,7 @@ padding: 40px 0px 40px 0px;
 
 .boks-person:hover {
   transform: scale(0.95);
+  box-shadow: inset 0 0 0 1px #04619d;
 }
 
 .boks-person h2 {
@@ -450,6 +451,7 @@ footer {
 
 .traad-container:hover {
    transform: scale(0.95);
+   box-shadow: inset 0 0 0 5px #04619d;
 }
 
 h1.traad-titel {
@@ -638,7 +640,6 @@ p.bruger-beskrivelse {
 /**************OPGAVER*************************/
 #wrapper-opgaver {
   width: 100%;
-  padding: 20px;
   box-sizing: border-box;
   background-color: #E4ECF2;
 }
@@ -649,6 +650,7 @@ p.bruger-beskrivelse {
   flex-wrap: wrap;
   justify-content: center;
   margin: auto;
+  padding: 30px;
 }
 .img-opgave1 {
   background-image: url("../images/opgaver/001.png");
@@ -907,10 +909,6 @@ h1.boks-titel {
   transition: all 0.3s ease;
 }
 
-h1.boks-titel:hover {
-  opacity: 0.5;
-  box-shadow: inset 0 0 0 5px #53a7ea;
-}
 
 a {
   text-decoration: none;
@@ -961,6 +959,9 @@ a {
   align-items: center;
   justify-content: center;
 }
+
+
+
 h1.klasse-titel {
   font-family: "Lato-Regular";
   font-size: 22px;
