--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,38 @@ header#header-minprofil {
   width: 30px;
 }
 
+
+.edit {
+  display: flex;
+  position: absolute;
+  right: 150px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  transition: all 0.3s ease;
+  background-color: #044C7F;
+}
+
+.edit:hover {
+  opacity: 0.5;
+}
+
+.edit h2 {
+  font-family: "Lato-Light";
+  color: white;
+  text-align: center;
+  width: 100px;
+  font-size: 18px;
+  padding-bottom: 10px;
+}
+
+
+.edit  img {
+  width: 30px;
+}
+
+
 .oploadbuttom {
   position: absolute;
   max-width: 180px;
